--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "~1.7.8"
-  }
+  },
+  "dependencies": {
+    "nem-library": "~0.10.0",
+    "rxjs": "~5.5.0",
+    "qrcode": "~0.9.0"
+   }
 }
